bk_ida/gccida/c1/get_func_hard_reg_initial_val
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/integrate.c:3534:58: error: expected expression
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/integrate.c:3534:36: error: use of undeclared identifier 'initial_value_pair_0'
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/integrate.c:3541:58: error: expected expression
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16 * v6); 
                                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/integrate.c:3541:36: error: use of undeclared identifier 'initial_value_pair_0'
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16 * v6); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/integrate.c:3544:25: error: use of undeclared identifier 'machine_mode'
result = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_func_hard_reg_initial_val/src/obj/integrate.o] Error 1
